# TinyMintPlayer

./: .gitignore  Application.h  ApplicationSettings.cpp  ApplicationSettings.h  CMakeLists.txt  MusicPlayer.cpp  MusicPlayer.h  Playlist.cpp  Playlist.h  README.md  main.cpp
src/: Application.cpp  ApplicationSettings.h  MusicPlayer.h
src/components/: IConnector.h
src/components/musicplayer/: MusicPlayerConnector.cpp  MusicPlayerConnector.h  MusicPlayerLogic.cpp  MusicPlayerLogic.h  MusicPlayerUI.cpp  MusicPlayerUI.h
src/components/playlist/: PlaylistConnector.cpp  PlaylistConnector.h  PlaylistLogic.cpp  PlaylistLogic.h  PlaylistUI.cpp  PlaylistUI.h
src/core/: Application.cpp  Application.h
